WIP tmlr webpage

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,29 +2,34 @@
 
 {% block content %}
 
-<h1>Journal of Machine Learning Research</h1>
+
+<h1>Transactions of Machine Learning Research</h1>
 
 <p>
-The Journal of Machine Learning Research (JMLR) provides an
-international forum for the electronic and paper publication of
-high-quality scholarly articles in all areas of machine learning.  
-All published papers are freely available online.
+    Transactions on Machine Learning Research (TMLR) is a new venue for dissemination of machine learning research that is intended to complement JMLR while supporting the unmet needs of a growing ML community. TMLR emphasizes technical correctness over subjective significance, in order to ensure we facilitate scientific discourses on topics that are deemed less significant by contemporaries but may be so in the future. TMLR caters to the shorter format manuscripts that are usually submitted to conferences, providing fast turnarounds and double blind reviewing. We employ a rolling submission process, shortened review period, flexible timelines, and variable manuscript length, to enable deep and sustained interactions among authors, reviewers, editors and readers. This leads to a high level of quality and rigor for every published article. TMLR does not accept submissions that have any overlap with previously published work. TMLR maximizes openness and transparency by hosting the review process on <a href="https://openreview.net/">OpenReview</a>.     
 </p>
 
 
-<!--                                                                                      
-<h2>News</h2>
-<ul>
-    <li><i>2020.02.15</i>: <a href=papers/v20>Volume 20</a> completed; <a href=papers/v21>Volume 21</a> began. </li>
-    <li><i>2019.01.20</i>: <a href=papers/v19>Volume 19</a> completed; <a href=papers/v20>Volume 20</a> began. </li>
-    <li><i>2018.08.28</i>: <a href=papers/v18>Volume 18</a> completed; <a href=papers/v19>Volume 19</a> began. </li>
-    <li><i>2018.04.16</i>: <a href="/news-archive/20180416-changes.html">Changes</a> in JMLR leadership team.</li>
-    <li><i>2016.12.01</i>: <a href="papers/topic/2016-Learning-from-Electronic-Health-Data.html">Special topic on Learning from Electronic Health Data</a></li>
-    <li><i>2015.09.01</i>: <a href="papers/special/chervonenkis15.html">Special issue in Memory of Alexey Chervonenkis</a>.</li>
-</ul>
-</td>
--->
 
+
+<h2>Editors-in-Chief</h2>
+
+
+<p>
+    Acting and founding Editors-in-Chief of TMLR are Hugo Larochelle (Google, Mila), Raia Hadsell (DeepMind) and Kyunghyun Cho (New York University), along with Managing Editor Fabian Pedregosa (Google). The goal of TMLR and the Editors-in-Chief is to support the evolving needs of the machine learning community. We welcome your feedback and comments via e-mail: <a href="mailto:tmlr@jmlr.org">tmlr@jmlr.org</a> .     
+</p>
+
+
+<h2>OpenReview</h2>
+
+
+<p>
+We use the reviewing and publication systems on <a href="https://openreview.net/">OpenReview</a> for openness and transparency. Stay tuned for submission instructions.
+    
+</p>
+
+
+<!-- 
 <h2>Latest papers</h2>
 
 <ul class="list-papers list-group list-group-flush">
@@ -37,7 +42,7 @@ All published papers are freely available online.
     {% endfor %}
     <li class="list-group-item"><a href="{{base_url}}/papers/">See more</a></li>
 </ul>
-{% endblock %}
+{% endblock %} -->
 
 
 {% block sidebar %}
