--- a/templates/base.html
+++ b/templates/base.html
@@ -1,130 +1,93 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="utf-8">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131826476-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  <title>{% block title %}{{ title }}{% endblock %}</title>
+    gtag('config', 'UA-131826476-1');
+    </script>
 
-
-  <!-- TODO: see https://mdbootstrap.com/docs/jquery/navigation/compositions/ -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-  
-  <!-- Bootstrap CSS -->
-  <link href="{{base_url}}/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Material Design Bootstrap -->
-  <link href="{{base_url}}/css/mdb.min.css" rel="stylesheet">
-  <!-- Your custom styles (optional) -->
-  <link href="{{base_url}}/css/style.css" rel="stylesheet">
+    <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 
   <!-- favicon -->
   <link rel="icon" href="/img/favicon.ico">
-  <link rel="icon" type="image/png" href=/img/favicon-16x16.png">
-  <link rel="icon" type="image/png" href=/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" href="/img/favicon-16x16.png">
+  <link rel="icon" type="image/png" href="/img/favicon-32x32.png">
 
-  <style>
-    h1, h2 { 
-        color: #303060;
-        margin-bottom: 0.5em;
-    }
+<title>{% block title %}Journal of Machine Learning Research{% endblock %}</title>
 
-    .darkblue {
-        color: #303060;
-    }
 
-    .volume {
-          font-weight: bold;
-    }
+<link rel="alternate" type="application/rss+xml" href="/jmlr.xml" title="JMLR RSS">
+<link rel="stylesheet" type="text/css" href="/style.css">
+<style type="text/css">
+. {font-family:verdana,helvetica,sans-serif}
+a {text-decoration:none;color:#3030a0}
 
-    .footer {
-        position: fixed;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        background-color: #f5f5f5;
-        color: #777;
-        text-align: center;
-      }
+#fixed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 8em;
+    height: 100%;
+}
+body > #fixed {
+    position: fixed;
+}
+#content {
+    margin-top: 1em;
+    margin-left: 10em;
+    margin-right: 0.5em;
+}
+img.jmlr {
+    width: 7em;
+}
+img.rss {
+    width: 2em;
+}
 
-  </style>
-  {% block extraheader %}
-  {% endblock %}
+ul li {
+    margin-bottom: 0.5em;
+}
+</style>
+
+{% block extraheader %}
+{% endblock %}
+
 </head>
+<body>
+
+  <div id="fixed">
+  <br>
+  <a align="right" href="index.html" target=_top><img align="right" class="jmlr" src="img/tmlr.jpg" border="0"></a> 
+  <p><br><br>
+  <p align="right"> <a href="index.html"> Home Page </a> 
 
 
-<body id="page-top">
-<!--Navbar-->
-<header>
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark unique-color-dark fixed-top white-text">
-  <a class="navbar-brand" href="{{base_url}}"><strong>JMLR</strong></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item {%if home_active %} active {% endif %}">
-        <a class="nav-link" href="{{base_url}}/">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item {%if papers_active %} active {% endif %}">
-        <a class="nav-link" href="{{base_url}}/papers/">Papers</a>
-      </li>
-      <li class="nav-item {%if submissions_active %} active {% endif %}">
-        <a class="nav-link" href="{{base_url}}/author-info.html">Submissions</a>
-      </li>
-      <li class="nav-item {%if editorial_board_active %} active {% endif %}">
-        <a class="nav-link" href="{{base_url}}/editorial-board.html">Editorial Board</a>
-      </li>
-      <li class="nav-item {%if mloss_active %} active {% endif %}">
-        <a class="nav-link" href="{{base_url}}/mloss/index.html">Open Source Software</a>
-      </li>
-      <li class="nav-item {%if faq_active %} active {% endif %}">
-        <a class="nav-link" href="https://www.jmlr.org/faq.html">Frequently Asked Questions</a>
-      </li>
-      <li class="nav-item {%if stats_active %} active {% endif %}">
-        <a class="nav-link" href="https://www.jmlr.org/stats.html">Statistics</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="http://proceedings.mlr.press/">Proceedings</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{base_url}}/manudb">Login</a>
-      </li>
-      <li class="nav-item {%if contact_active %} active {% endif %}">
-        <a class="nav-link" href="{{base_url}}/contact.html">Contact</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav nav-flex-icons">
-      <li class="nav-item">
-        <a class="nav-link" href="https://twitter.com/JmlrOrg"><i class="fab fa-twitter"></i></a>
-      </li>
-    </ul>
+  <p align="right"> <a href="submissions.html"> Submissions</a> 
+
+  <p align="right"> <a href="reviewer-guide.html"> Reviewer guide</a> 
+
+  <p align="right"> <a href="faq.html">Frequently Asked Questions </a></p>
+                                     
+  <p align="right"> <a href="/contact.html"> Contact Us </a></p>
+
+
   </div>
-</nav>
-</header>
 
-<!-- Page Content -->
-<main>
-<div id="content" class="container">
-    <div class="row mt-5 pt-5">
-        <div class="col">
-            {% block content %}{% endblock %}
-        </div>
-        <div class="col-xs-6 col-md-4">
-                {% block sidebar %}{% endblock %}
-        </div>
-    </div>
+<div id="content">
+    {% block content %}
+
+    {% endblock %}
+                      
+    <table width="100%"> <tr>
+    <td
+    align="right"><font size="-1">&copy <a target="_top"
+    href="https://www.jmlr.org">JMLR</a> {{year}}. {% block footer %}{% endblock %}</td> </tr> </table>
+
 </div>
-</main>
 
-<footer class="footer">
-    <div class="container">
-        {% block footer %}{% endblock %}
-    </div>        
-</footer>
-
-<script type="text/javascript" src="{{base_url}}/js/jquery.min.js"></script>
-<script type="text/javascript" src="{{base_url}}/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="{{base_url}}/js/mdb.min.js"></script>
 </body>
 </html>
