--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,6 @@
 
 
 
-
 <h2>Editors-in-Chief</h2>
 
 
@@ -28,6 +27,77 @@ We use the reviewing and publication systems on <a href="https://openreview.net/
     
 </p>
 
+
+
+<h2>Advisory Board Members</h2>
+
+<p>TMLR&rsquo;s founding advisory board consists of nine experts who have contributed to and
+        extensive experiences in creating, maintaining and improving academic publication venues, conferences and
+        workshops in both machine learning and adjacent areas.</p>
+<p><a class="c1"
+            href="https://www.google.com/url?q=https://yoshuabengio.org&amp;sa=D&amp;source=editors&amp;ust=1638370889694000&amp;usg=AOvVaw2dvEXQpnMnw5ct-DJ5MkS7">Yoshua
+            Bengio</a>: Mila.</p>
+<p><a class="c1"
+            href="https://www.google.com/url?q=https://people.cs.umass.edu/~mccallum/&amp;sa=D&amp;source=editors&amp;ust=1638370889695000&amp;usg=AOvVaw1TMy4iBxi8y-_oqbMUPFA6">Andrew
+            McCallum</a>: University of Massachusetts, Amherst.</p>
+<p><a class="c1"
+            href="https://www.google.com/url?q=https://scholar.google.com/citations?user%3DcIlDEugAAAAJ%26hl%3Den&amp;sa=D&amp;source=editors&amp;ust=1638370889695000&amp;usg=AOvVaw0wAW2bpdQq4RClN1UiPhSU">Shakir
+            Mohamed</a>: DeepMind.</p>
+<p><a class="c1"
+            href="https://www.google.com/url?q=https://www.is.mpg.de/~bs&amp;sa=D&amp;source=editors&amp;ust=1638370889696000&amp;usg=AOvVaw009dr48vTYCKOTd3X9eA_j">Berhard
+            Schoelkopf</a>: Max Planck Institute for Intelligent Systems.</p>
+<p><a class="c1"
+            href="https://www.google.com/url?q=https://natschluter.github.io&amp;sa=D&amp;source=editors&amp;ust=1638370889696000&amp;usg=AOvVaw3TXm64gg4OcsLzTpXuyudn">Natalie
+            Schluter</a>: Google and IT University, Copenhagen.</p>
+<p><a class="c1"
+            href="https://www.google.com/url?q=http://koerding.com&amp;sa=D&amp;source=editors&amp;ust=1638370889697000&amp;usg=AOvVaw3S5IkA1Md582gH0RFo3IIC">Konrad
+            Kording</a>: University of Pennsylvania.</p>
+<p><a class="c1"
+            href="https://www.google.com/url?q=https://www.cs.cornell.edu/home/llee/&amp;sa=D&amp;source=editors&amp;ust=1638370889698000&amp;usg=AOvVaw1sHcITy7nK-iJHzetG-P9J">Lillian
+            Lee</a>: Cornell University.</p>
+<p><a class="c1"
+            href="https://www.google.com/url?q=https://www.cc.gatech.edu/~parikh/&amp;sa=D&amp;source=editors&amp;ust=1638370889698000&amp;usg=AOvVaw1dCqMDCS0CN5pkrKE3fzGa">Devi
+            Parikh</a>: Facebook and Georgia Tech.</p>
+<p><a class="c1"
+            href="https://www.google.com/url?q=https://www.andrew.cmu.edu/user/achoulde/&amp;sa=D&amp;source=editors&amp;ust=1638370889699000&amp;usg=AOvVaw2YWbbumRXK0p2uE3K6flL-">Alexandra
+            Chouldechova</a>: Carnegie Mellon University.</p>
+
+<h2><span class="c5">Sponsors</h2>
+<p>TMLR is supported by our generous sponsors:</p>
+<p class="c2 c6"></p>
+<p><span>&nbsp; &nbsp; <span
+        style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 150.16px; height: 61.00px;"><img
+            alt="" src="images/image1.png"
+            style="width: 150.16px; height: 61.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+            title=""><span>&nbsp;<span class="c3"><a class="c1"
+            href="https://www.google.com/url?q=https://mila.quebec/en/&amp;sa=D&amp;source=editors&amp;ust=1638370889700000&amp;usg=AOvVaw1xT6VgA26o_TSDj4EG17s7">Mila
+            - Quebec AI Institute </a></p>
+<p><span>&nbsp; &nbsp; <span
+        style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 151.53px; height: 62.61px;"><img
+            alt="" src="images/image2.png"
+            style="width: 151.53px; height: 62.61px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+            title=""><span class="c3"><a class="c1"
+            href="https://www.google.com/url?q=https://vectorinstitute.ai&amp;sa=D&amp;source=editors&amp;ust=1638370889701000&amp;usg=AOvVaw0Lc2r2IXhGPpExfs46ACmY">Vector
+            Institute</a></p>
+<p><span>&nbsp; &nbsp; <span
+        style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 120.15px; height: 43.13px;"><img
+            alt="" src="images/image3.png"
+            style="width: 120.15px; height: 43.13px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+            title=""><span class="c3"><a class="c1"
+            href="https://www.google.com/url?q=https://cifar.ca&amp;sa=D&amp;source=editors&amp;ust=1638370889701000&amp;usg=AOvVaw0aG30TanQX1_qW-Qr7hwEt">CIFAR</a>
+</p>
+<p><span>&nbsp; &nbsp; <span
+        style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 158.63px; height: 38.29px;"><img
+            alt="" src="images/image4.png"
+            style="width: 158.63px; height: 38.29px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+            title=""><span class="c3"><a class="c1"
+            href="https://www.google.com/url?q=https://deepmind.com&amp;sa=D&amp;source=editors&amp;ust=1638370889702000&amp;usg=AOvVaw34WLzfgsxrTDMmK0kY9gTE">DeepMind</a>
+</p>
+<p class="c2 c6"></p>
+<p class="c2 c6"></p>
+<div class="c7">
+    <p class="c9"><a href="#cmnt_ref1" id="cmnt1">[a]</a>once the openreview page is ready...</span>
+    </p>
 
 <!-- 
 <h2>Latest papers</h2>
