--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,6 @@
 
 
 <link rel="alternate" type="application/rss+xml" href="/jmlr.xml" title="JMLR RSS">
-<link rel="stylesheet" type="text/css" href="/style.css">
 <style type="text/css">
 . {font-family:verdana,helvetica,sans-serif}
 a {text-decoration:none;color:#3030a0}
@@ -51,6 +50,10 @@ img.rss {
 ul li {
     margin-bottom: 0.5em;
 }
+
+.bold {
+    font-weight: bold;
+}
 </style>
 
 {% block extraheader %}
@@ -61,14 +64,20 @@ ul li {
 
   <div id="fixed">
   <br>
-  <a align="right" href="index.html" target=_top><img align="right" class="jmlr" src="img/tmlr.jpg" border="0"></a> 
-  <p><br><br>
+  <a align="right" href="index.html" target=_top><img style="margin-bottom: 1em" align="right" class="jmlr" src="img/tmlr.jpg" border="0"></a> 
+  <p><br><br><br>
   <p align="right"> <a href="index.html"> Home Page </a> 
 
+  <p align="right"> <a href="editorial-policies.html"> Editorial Policies</a> 
 
   <p align="right"> <a href="submissions.html"> Submissions</a> 
 
   <p align="right"> <a href="reviewer-guide.html"> Reviewer guide</a> 
+
+  <p align="right"> <a href="author-guide.html"> Author guidelines</a> 
+
+  <p align="right"> <a href="ae-guide.html"> Action editor guidelines</a> 
+
 
   <p align="right"> <a href="faq.html">Frequently Asked Questions </a></p>
                                      
@@ -85,7 +94,7 @@ ul li {
     <table width="100%"> <tr>
     <td
     align="right"><font size="-1">&copy <a target="_top"
-    href="https://www.jmlr.org">JMLR</a> {{year}}. {% block footer %}{% endblock %}</td> </tr> </table>
+    href="https://www.jmlr.org/tmlr/">TMLR</a> {{year}}. {% block footer %}{% endblock %}</td> </tr> </table>
 
 </div>
 
