--- a/templates/base.html
+++ b/templates/base.html
@@ -76,17 +76,15 @@ ul li {
 
   <p align="right"> <a href="submissions.html"> Submissions</a> 
 
+  <p align="right"> <a href="code.html"> Code of Conduct</a> 
+
   <p align="right"> <a href="reviewer-guide.html"> Reviewer guide</a> 
 
   <p align="right"> <a href="author-guide.html"> Author guidelines</a> 
 
   <p align="right"> <a href="ae-guide.html"> Action editor guidelines</a> 
 
-
-  <p align="right"> <a href="faq.html">Frequently Asked Questions </a></p>
-                                     
-  <p align="right"> <a href="/contact.html"> Contact Us </a></p>
-
+  <p align="right"> <a href="faq.html">Contact and Frequently Asked Questions </a></p>
 
   </div>
 
