--- a/templates/submissions.html
+++ b/templates/submissions.html
@@ -4,7 +4,7 @@
 <h1>TMLR Submission Instructions</h1>
 
 <p>
-    Before submitting to TMLR, please carefully read the Editorial Policies page which explains TMLR’s scope, criteria, and review process, the Author Guidelines, and also the Code of Conduct and Ethical Guidelines. The Author Guidelines page contains a LaTeX stylefile and template; these are mandatory. Any changes to the stylefile or template that alters the formatting, font, or layout of the manuscript may result in rejection without review.
+    Before submitting to TMLR, please carefully read the <a href="editorial-policies.html">Editorial Policies</a> page which explains TMLR’s scope, criteria, and review process, the <a href="author-guide.html">Author Guidelines</a>, and also the <a href="code.html">Code of Conduct</a> and Ethical Guidelines. The Author Guidelines page contains a LaTeX stylefile and template; these are mandatory. Any changes to the stylefile or template that alters the formatting, font, or layout of the manuscript may result in rejection without review.
 </p>
 
 <p>
