--- a/templates/base.html
+++ b/templates/base.html
@@ -84,7 +84,7 @@ ul li {
 
   <p align="right"> <a href="ae-guide.html"> Action editor guidelines</a> 
 
-  <p align="right"> <a href="faq.html">Contact and Frequently Asked Questions </a></p>
+  <p align="right"> <a href="contact.html">Contact and Frequently Asked Questions </a></p>
 
   </div>
 
