--- a/templates/base.html
+++ b/templates/base.html
@@ -72,6 +72,8 @@ ul li {
   <p><br><br><br>
   <p align="right"> <a href="index.html"> Home Page </a> 
 
+  <p align="right"> <a href="editorial-board.html"> Editorial Board </a> 
+
   <p align="right"> <a href="editorial-policies.html"> Editorial Policies</a> 
 
   <p align="right"> <a href="submissions.html"> Submissions</a> 
