--- a/templates/editorial-board.html
+++ b/templates/editorial-board.html
@@ -46,120 +46,14 @@ $(document).ready(function(){
     </ul>
     
     <h3>Managing Editors</h3>
-    <ul class="editors">{% for e in managing_editors %}
-      <li><a class="name" href="{{ e.url }}">{{ e.name }}</a>, {{ e.affiliation }}.</li>{% endfor %}
-    </ul>
-    
-    <h3>Editorial Assistant</h3>
-    <ul class="editors">{% for e in editorial_assistants %}
-      <li><a class="name" href="{{ e.url }}">{{ e.name }}</a>, {{ e.affiliation}}.</li>{% endfor %}
-    </ul>
-    
-    
-    <h3>Production Editor</h3>
-    <ul class="editors">{% for e in production_editors %}
-      <li><a class="name" href="{{ e.url }}">{{ e.name }}</a>, {{ e.affiliation}}.</li>{% endfor %}
-    </ul>
-
-    <!--
-    <h3>Production Staff</h3>
     <ul class="editors">
-      <li><a class="name" href="http://acl.mit.edu/members/tcampbell.htm">Trevor Campbell</a></b>, Massachusetts Institute of Technology.</li>
-      <li><a class="name" href="http://ei.is.tuebingen.mpg.de/person/btabibian">Behzad Tabibian</a></b>, MPI for Intelligent Systems</li>
-      <li><a class="name" href="http://hhcho.com">Hoon Cho</a></b>, Massachusetts Institute of Technology</li>
+      <li><a class="name" href="http://fa.bianp.net">Fabian Pedregosa</a>, Google.</li>
     </ul>
-    -->
-    
-    
-    <h3>Web Master</h3>
-    <ul class="editors">{% for e in webmaster %}
-      <li><a class="name" href="{{ e.url }}">{{ e.name }}</a>, {{ e.affiliation}}.</li>{% endfor %}
-    </ul>
-    
-    
     
     <h3>JMLR Action Editors</h3>
       <ul class="editors">{% for e in action_editors %}
         <li><a class="name" href="{{ e.url }}">{{ e.name }}</a>, <span class='affiliation'>{{ e.affiliation }}</span>. <span class="research">{{e.research}}</span>{% endfor %}
       </ul>
     
-    <div id="innercontent"></div>
  
-
-    <h3>
-    JMLR-<a href="/mloss">MLOSS</a> Editors</h3>
-    
-    <ul class='editors'>
-      <li><a href='http://alexandre.gramfort.net/'><span class='name'>Alexandre Gramfort</span></a>, <span class='affiliation'>INRIA, Université Paris-Saclay, France</span>. <span class='research'>supervised learning, convex optimization, sparse methods, machine learning software, applications in neuroscience</span></li>
-      <li><a href='http://www.hiit.fi/u/ahonkela/'><span class='name'>Antti Honkela</span></a>, <span class='affiliation'>University of Helsinki, Finland</span>. <span class='research'>Probabilistic modelling, approximate inference, bioinformatics</span></li>
-      <li><a href='https://joaquinvanschoren.github.io/'><span class='name'>Joaquin Vanschoren</span></a>, <span class='affiliation'>Eindhoven University of Technology, Netherlands</span>. <span class='research'>Automated machine learning, meta-learning, machine learning software.</span></li>
-    </ul>
-        
-    <h3>
-    JMLR Advisory Board</h3>
-    
-    <ul>
-    <li>
-    <b>Shun-Ichi Amari</b>, RIKEN Brain Science Institute, Japan</li>
-    
-    <li>
-    <b>Andrew Barto</b>, University of Massachusetts at Amherst, USA</li>
-    
-    <li>
-    <b>Thomas Dietterich</b>, Oregon State University, USA</li>
-    
-    <li>
-    <b>Jerome Friedman</b>, Stanford University, USA</li>
-    
-    <li>
-    <b>Stuart Geman</b>, Brown University, USA</li>
-    
-    <li>
-    <b>Geoffrey Hinton</b>, University of Toronto, Canada</li>
-    
-    <li>
-    <b>Michael Jordan</b>, University of California at Berkeley at USA</li>
-    
-    <li>
-    <b>Leslie Pack Kaelbling</b>, Massachusetts Institute of Technology, USA</li>
-    
-    <li>
-    <b>Michael Kearns</b>, University of Pennsylvania, USA</li>
-    
-    <li>
-    <b>Steven Minton</b>, InferLink, USA</li>
-    
-    <li>
-    <b>Tom Mitchell</b>, Carnegie Mellon University, USA</li>
-    
-    <li>
-    <b>Stephen Muggleton</b>, Imperial College London, UK</li>
-    
-    <li>
-    <b>Kevin Murphy</b>, Google, USA</li>
-    
-    <li>
-    <b>Tomaso Poggio</b>, Massachusetts Institute of Technology, USA</li>
-    
-    <li>
-    <b>Ross Quinlan</b>, Rulequest Research Pty Ltd, Australia</li>
-    
-    <li>
-    <b>Stuart Russell</b>, University of California at Berkeley, USA</li>
-    
-    <li>
-    <b>Lawrence Saul</b>, University of California at San Diego, USA</li>
-    
-    <li>
-    <b>Terrence Sejnowski</b>, Salk Institute for Biological Studies, USA</li>
-    
-    <li>
-    <b>Richard Sutton</b>, University of Alberta, Canada</li>
-    
-    <li>
-    <b>Leslie Valiant</b>, Harvard University, USA</li>
-    
-    </ul>
-    
-<h3><a href="editorial-board-reviewers.html">Editorial board reviewers</a></h3>
 {% endblock %}
