add missing links

--- a/templates/editorial-policies.html
+++ b/templates/editorial-policies.html
@@ -103,14 +103,13 @@
             unethical research, any plagiarized content (including figures), or findings that are erroneous (due to
             misconduct or honest error).</span></p>
     <p></p>
-    <p><span>Our </span><span>Ethics Guidelines</span><sup><a href="#cmnt2"
-                id="cmnt_ref2">[b]</a></sup><span>&nbsp;describe TMLR&rsquo;s ethical principles and establish common
+    <p>Our <a href="ethics.html">Ethics Guidelines</a> describe TMLR&rsquo;s ethical principles and establish common
             ground for editors, reviewers, and authors to evaluate the potential for harm of a proposed work.
             Submissions which describe work with the potential for harm should clearly describe the risks and
             mitigations in an (otherwise optional) Broader Impact Statement. In situations where a reviewer with ethics
             expertise is required to evaluate the impact and potential for harm, or where the action editor suspects
             that no statement would make the work ethically acceptable, reach out to the
-        </span><span>Editors-in-Chief</span><sup><a href="#cmnt3" id="cmnt_ref3">[c]</a></sup><span class="c1">. </span>
+       <a href="tmlr@jmlr.org">Editors-in-Chief</a>. </span>
     </p>
     <h2><span>Evaluation criteria</span><span class="c5">&nbsp;and certifications</span>
     </h2>
