--- a/templates/author-guide.html
+++ b/templates/author-guide.html
@@ -4,10 +4,7 @@
 
     <h1 class="c9" id="h.9thkl4ire28v"><span>TMLR guidelines for authors </span></h1>
     <p class="c0"><span>This document provides instructions for authors. Authors are required to also read and be
-            familiar with the </span><span>Editorial Policies</span><sup><a href="#cmnt1"
-                id="cmnt_ref1">[a]</a></sup><span>, the </span><span>Ethics Guidelines</span><sup><a href="#cmnt2"
-                id="cmnt_ref2">[b]</a></sup><span>, and the </span><span>Code of Conduct</span><sup><a href="#cmnt3"
-                id="cmnt_ref3">[c]</a></sup><span class="c3">.</span></p>
+            familiar with the <a href="editorial-policies"> Editorial Policies</a>, the <a href="ethics.html">Ethics Guidelines</a>, and the <a href="code.html">Code of Conduct</a></p>
     <h2 class="c5" id="h.x77xxp6dwm4e"><span class="c1">Overview of submission process</span></h2>
     <p class="c0"><span class="c3">TMLR uses a double blind review process and submissions must be anonymized. All
             authors must create author profiles and give conflict of interest information. They also must provide
