--- a/templates/base.html
+++ b/templates/base.html
@@ -76,11 +76,11 @@ ul li {
 
   <p align="right"> <a href="submissions.html"> Submissions</a> 
 
-  <p align="right"> <a href="editorial-policies.html"> Editorial Policies</a> 
+  <p align="right"> <a href="editorial-policies.html"> Submission guidelines and editorial policies</a> 
 
   <p align="right"> <a href="code.html"> Code of Conduct</a> 
 
-  <p align="right"> <a href="reviewer-guide.html"> Reviewer guide</a> 
+  <p align="right"> <a href="reviewer-guide.html"> Reviewer guidelines</a> 
 
   <p align="right"> <a href="author-guide.html"> Author guidelines</a> 
 
