--- a/templates/editorial-policies.html
+++ b/templates/editorial-policies.html
@@ -68,8 +68,7 @@
                 revised version of the PDF manuscript. Reviewers will be able to submit their final recommendations once
                 at least two weeks have elapsed after all 3 reviews became public.</span></li>
         <li><span class="bold">Decision. </span><span class="c1">The discussion period ends when
-                the action editor enters a decision for the paper, which is one of the following: <br></span></li>
-    </ol>
+                the action editor enters a decision for the paper, which is one of the following: <br></span>
     <ul class="c9 lst-kix_knagtdofk76a-1 start">
         <li class="c0 c13 li-bullet-0"><span class="bold">Accept as is:</span><span class="c1">&nbsp;the author is
                 notified, and, once the camera ready version is submitted and verified, the manuscript is published.
@@ -84,6 +83,8 @@
             </span><span>opportunity</span><span>&nbsp;to reveal their identity. &nbsp;Doing so will preclude them from
                 submitting a revised version of the manuscript to TMLR.</span><span class="c1">&nbsp;</span></li>
     </ul>
+</li>
+</ol>
     <p></p>
     <p class="c0 c16"><span class="c1">Authors of a rejected submission may revise and resubmit their paper, but it will
             need to be entered as a new submission and provide a link to the previously rejected submission as well as a
