--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<h1>Transactions of Machine Learning Research</h1>
+<h1>Transactions on Machine Learning Research</h1>
 
 <p>
     Transactions on Machine Learning Research (TMLR) is a new venue for dissemination of machine learning research that is intended to complement JMLR while supporting the unmet needs of a growing ML community. TMLR emphasizes technical correctness over subjective significance, in order to ensure we facilitate scientific discourses on topics that are deemed less significant by contemporaries but may be so in the future. TMLR caters to the shorter format manuscripts that are usually submitted to conferences, providing fast turnarounds and double blind reviewing. We employ a rolling submission process, shortened review period, flexible timelines, and variable manuscript length, to enable deep and sustained interactions among authors, reviewers, editors and readers. This leads to a high level of quality and rigor for every published article. TMLR does not accept submissions that have any overlap with previously published work. TMLR maximizes openness and transparency by hosting the review process on <a href="https://openreview.net/">OpenReview</a>.     
@@ -15,7 +15,7 @@
 
 
 <p>
-    Acting and founding Editors-in-Chief of TMLR are Hugo Larochelle (Google, Mila), Raia Hadsell (DeepMind) and Kyunghyun Cho (New York University), along with Managing Editor Fabian Pedregosa (Google). The goal of TMLR and the Editors-in-Chief is to support the evolving needs of the machine learning community. We welcome your feedback and comments via e-mail: <a href="mailto:tmlr@jmlr.org">tmlr@jmlr.org</a> .     
+    Acting and founding Editors-in-Chief of TMLR are <a href="https://mila.quebec/en/person/hugo-larochelle/">Hugo Larochelle</a> (Google, Mila), <a href="http://www.raiahadsell.com/">Raia Hadsell</a> (DeepMind) and <a href="https://kyunghyuncho.me/">Kyunghyun Cho</a> (New York University), along with Managing Editor <a href="http://fa.bianp.net">Fabian Pedregosa</a> (Google). The goal of TMLR and the Editors-in-Chief is to support the evolving needs of the machine learning community. We welcome your feedback and comments via e-mail: <a href="mailto:tmlr@jmlr.org">tmlr@jmlr.org</a> .     
 </p>
 
 
