--- a/templates/reviewer-guide.html
+++ b/templates/reviewer-guide.html
@@ -4,7 +4,7 @@
 <h2>TMLR guidelines for reviewers</h2>
 
 <p>
-    This document provides instructions for reviewers. Before reading this section, make sure to also read and be familiar with the Editorial Policies, the Ethics Guidelines, and the Code of Conduct.
+    This document provides instructions for reviewers. Before reading this section, make sure to also read and be familiar with the <a href="editorial-policies.html">Editorial Policies</a>, the <a href="ethics.html">Ethics Guidelines</a>, and the <a href="code.html">Code of Conduct</a>.
 </p>
 
 <h3>Reviewing Responsibilities</h3>
@@ -37,53 +37,155 @@
     <b>Conflict of interest.</b> You are responsible for making sure your affiliation and education/career history information is up to date in your OpenReview profile, so we can properly enforce our conflict of interest policy. We consider in conflict any individual or institution with which you have shared a collaboration within the past three years. After being assigned a submission, if you suspect or believe that you have a conflict of interest with any of the authors, consult with the AE for next steps.
 </p>
 
-<h3>Submission Acceptance Standard</h3>
-
-<p>
-    The Editorial Policies page provides a brief description of TMLR’s acceptance criteria, which we expand further here.
-</p>
-
-Acceptance of a submission to TMLR should be based on positive answers to the following two questions.
-
-Are the claims made in the submission supported by accurate, convincing and clear evidence?
-This is the most important criteria. This implies assessing the technical soundness as well as the clarity of the narrative and arguments presented.
-
-Any gap between claims and evidence should be addressed by the authors. Often, this will lead reviewers to ask the authors to provide more evidence by running more experiments. However, this is not the only way to address such concerns. Another is simply for the authors to adjust (reduce) their claims.
-
-Would some individuals in TMLR's audience be interested in the findings of this paper?
-This is arguably the most subjective criteria, and therefore needs to be treated carefully. Generally, a reviewer that is unsure as to whether a submission satisfies this criteria should assume that it does.
-
-Crucially, it should not be used as a reason to reject work that isn’t considered “significant” or “impactful” because it isn’t achieving a new state-of-the-art on some benchmark. Nor should it form the basis for rejecting work on a method considered not “novel enough”, as novelty of the studied method is not a necessary criteria for acceptance. We explicitly avoid these terms (“significant”, “impactful”, “novel”), and focus instead on the notion of “interest”. If the authors make it clear that there is something to be learned by some researchers in their area from their work, then the criteria of interest is considered satisfied. TMLR instead relies on certifications (such as “Featured” and “Outstanding”) to provide annotations on submissions that pertain to (more speculative) assertions on significance or potential for impact. 
-
-Here’s an example on how to use the criteria above. A machine learning class report that re-runs the experiments of a published paper has educational value to the students involved. But if it doesn’t surface generalizable insights, it is unlikely to be of interest to (even a subset of) the TMLR audience, and so could be rejected based on this criteria. On the other hand, a proper reproducibility report that systematically studies the robustness or generalizability of a published method and lays out actionable lessons for its audience could satisfy this criteria.
-Review Format
-A review should have the following content.
-
-Summary of contributions  Brief description, in the reviewer’s words, of the contributions and new knowledge presented by the submission. 
-
-Strengths and weaknesses  List of the strong aspects of the submission as well as weaker elements (if any) that you think require attention from the authors.
-
-Requested changes  List of proposed adjustments to the submission, specifying for each whether they are critical to securing your recommendation for acceptance or would simply strengthen the work in your view.
-
-Broader impact concerns  Brief description of any concerns on the ethical implications of the work that would require adding a Broader Impact Statement (if one is not present) or that are not sufficiently addressed in the Broader Impact Statement section (if one is present).
-
-
-Immediately after submitting your review, the crucial period of discussion with the authors starts. You should engage with the authors by responding to their requests for clarifications, acknowledging the changes they make to their submission and signal as soon as you are willing to recommend acceptance. 
-
-Once two weeks have passed since all reviews have been submitted, reviewers will be able to submit their official recommendations to the AE. Specifically, they will be asked for the following.
-
-Decision recommendation (accept, leaning accept, leaning reject or reject)  Whether or not you recommend accepting the submission, based on your initial assessment and the discussion with the authors that followed.
-
-Certification recommendations  Certifications are meant to highlight particularly notable accepted submissions. Notably, it is through certifications that we make room for more speculative/editorial judgement on the significance and potential for impact of accepted submissions. Certification selection is the responsibility of the AE, however you are asked to submit your recommendation.
-
-
-The AE will monitor the discussion and consult the reviewers’ feedback and recommendations. When they will be ready to take a decision on the submission, they will also evaluate and rate your review.
-FAQ
-The submission has an appendix and supplementary material. Am I obligated to consult it? 
-Much like for reviewing at conferences, consulting appendices and supplementary material is left to the discretion of the reviewer. 
-
-Can I discuss the paper privately with the other reviewers and/or the AE?
-Yes, but only once all 3 reviewers have posted their review. Simply post a comment that is only visible to them to start the discussion.
+    <h2 id="h.q2ee6w3zmhbr">
+      <span>Submission Acceptance Standard</span>
+    </h2>
+    <p>
+      The <a href="editorial-policies.html">Editorial Policies</a> page provides a brief description of TMLR’s acceptance criteria, which we expand further here.
+    </p>
+    <p>
+      Acceptance of a submission to TMLR should be based on positive answers to the following two questions.
+    </p>
+    <p>
+      <span class="bold">Are the claims made in the submission supported by accurate, convincing and clear evidence?</span>
+    </p>
+    <p>
+      <span class="c1">This is the most important criteria. This implies assessing the technical soundness as well as the clarity of the narrative and arguments presented.</span>
+    </p>
+    <p class="c0">
+      <span class="c1"/>
+    </p>
+    <p>
+      <span class="c1">Any gap between claims and evidence should be addressed by the authors. Often, this will lead reviewers to ask the authors to provide more evidence by running more experiments. However, this is not the only way to address such concerns. Another is simply for the authors to adjust (reduce) their claims.</span>
+    </p>
+    <p class="c0">
+      <span class="c1"/>
+    </p>
+    <p>
+      <span class="bold">Would some individuals in TMLR's audience be interested in the findings of this paper?</span>
+    </p>
+    <p>
+      <span class="c1">This is arguably the most subjective criteria, and therefore needs to be treated carefully. Generally, a reviewer that is unsure as to whether a submission satisfies this criteria should assume that it does.</span>
+    </p>
+    <p class="c0">
+      <span class="c1"/>
+    </p>
+    <p>
+      <span>Crucially, it should </span>
+      <span class="c4">not</span>
+      <span> be used as a reason to reject work that isn’t considered “significant” or “impactful” because it isn’t achieving a new state-of-the-art on some benchmark. Nor should it form the basis for rejecting work on a method considered not “novel enough”, as novelty of the studied method is not a necessary criteria for acceptance. We explicitly avoid these terms (“significant”, “impactful”, “novel”), and focus instead on the notion of “interest”. If the authors make it clear that there is something to be learned by some researchers in their area from their work, then the criteria of interest is considered satisfied. </span>
+      <span class="c1">TMLR instead relies on certifications (such as “Featured” and “Outstanding”) to provide annotations on submissions that pertain to (more speculative) assertions on significance or potential for impact. </span>
+    </p>
+    <p class="c0">
+      <span class="c1"/>
+    </p>
+    <p>
+      <span>Here’s an example on how to use the criteria above. A machine learning class report that re-runs the experiments of a published paper has educational value to the students involved. But if it doesn’t surface generalizable insights, it is unlikely to be of interest to (even a subset of) the TMLR audience, and so could be rejected based on this criteria. On the other hand, a proper reproducibility report that systematically studies the robustness or generalizability of a published method and lays out actionable lessons for its audience could satisfy this criteria.</span>
+    </p>
+    <h2 id="h.ragth3czmyw6">
+      <span>Review Format</span>
+    </h2>
+    <p>
+      <span class="c1">A review should have the following content.</span>
+    </p>
+      <span class="c1"/>
+      <span class="c1">  Brief description, in the reviewer’s words, of the contributions and new knowledge presented by the submission. </span>
+    </p>
+    <p class="c0">
+      <span class="c1"/>
+    </p>
+    <p>
+      <span class="c2">Strengths </span>
+      <span class="c2">and weaknesses  </span>
+      <span class="c1">List of the strong aspects of the submission as well as weaker elements (if any) that you think require attention from the authors.</span>
+    </p>
+    <p class="c0">
+      <span class="c1"/>
+    </p>
+    <p>
+      <span class="c2">Requested changes  </span>
+      <span class="c1">List of proposed adjustments to the submission, specifying for each whether they are critical to securing your recommendation for acceptance or would simply strengthen the work in your view.</span>
+    </p>
+    <p class="c0">
+      <span class="c1"/>
+    </p>
+    <p>
+      <span class="c2">Broader impact concerns</span>
+      <span>  Brief description of any concerns on the ethical implications of the work that would require adding a Broader Impact Statement (if one is not present) or that are not sufficiently addressed in the Broader Impact Statement section (if one is present).</span>
+    </p>
+    <p class="c0">
+      <span class="c1"/>
+    </p>
+    <p class="c0">
+      <span class="c1"/>
+    </p>
+    <p>
+      <span>Immediately after submitting your review, the </span>
+      <span>crucial period of discussion with the authors starts</span>
+      <span class="c1">. You should engage with the authors by responding to their requests for clarifications, acknowledging the changes they make to their submission and signal as soon as you are willing to recommend acceptance. </span>
+    </p>
+    <p class="c0">
+      <span class="c1"/>
+    </p>
+    <p>
+      <span>Once two weeks have passed since all reviews have been submitted, </span>
+      <span>reviewers will be able to submit their </span>
+      <span>official</span>
+      <span> recommendations to the AE</span>
+      <span class="c1">. Specifically, they will be asked for the following.</span>
+    </p>
+    <p class="c0">
+      <span class="c1"/>
+    </p>
+    <p>
+      <span class="c2">Decision recommendation</span>
+      <span class="c2"> (</span>
+      <span class="bold">accept</span>
+      <span class="c2">, </span>
+      <span class="bold">leaning accept</span>
+      <span class="c2">, </span>
+      <span class="bold">leaning reject</span>
+      <span class="c2"> or </span>
+      <span class="bold">reject</span>
+      <span class="c2">)</span>
+      <span class="c1">  Whether or not you recommend accepting the submission, based on your initial assessment and the discussion with the authors that followed.</span>
+    </p>
+    <p class="c0">
+      <span class="c1"/>
+    </p>
+    <p>
+      <span class="c2">Certification recommendations</span>
+      <span class="c2">  </span>
+      <span>Certifications</span>
+      <span> are meant to highlight particularly notable accepted submissions. Notably, it is through certifications that we make room for more speculative/editorial judgement on the significance and potential for impact of accepted submissions. Certification selection is the responsibility of the AE, however you are asked to submit your recommendation.</span>
+    </p>
+    <p class="c0">
+      <span class="c1"/>
+    </p>
+    <p class="c0">
+      <span class="c1"/>
+    </p>
+    <p>
+      <span class="c1">The AE will monitor the discussion and consult the reviewers’ feedback and recommendations. When they will be ready to take a decision on the submission, they will also evaluate and rate your review.</span>
+    </p>
+    <h2 id="h.wa8z6pnmr5ze">
+      <span>FAQ</span>
+    </h2>
+    <p>
+      <span class="bold">The submission has an appendix and supplementary material. Am I obligated to consult it?</span>
+      <span> </span>
+    </p>
+    <p>
+        Much like for reviewing at conferences, consulting appendices and supplementary material is left to the discretion of the reviewer.  
+    </p>
+    <p>
+      <span class="bold">Can I discuss the paper privately with the other reviewers and/or the AE?</span>
+    </p>
+    <p>
+        Yes, but only once all 3 reviewers have posted their review. Simply post a comment that is only visible to them to start the discussion.
+    </p>
+  </body>
+</html>
 
 
 {% endblock %}
