--- a/templates/editorial-board.html
+++ b/templates/editorial-board.html
@@ -41,19 +41,25 @@ $(document).ready(function(){
 {% block content %}
     <h1>JMLR Editorial Board</h1>
     <h3>Editors-in-Chief</h3>
-    <ul class="editors">{% for e in editors_in_chief %}
-      <li><a class="name" href="{{ e.url }}">{{ e.name }}</a>, {{ e.affiliation }}.</li>{% endfor %}
+    <ul class="editors">
+      <li><a class="name" href="http://kyunghyuncho.me">Kyunghyun Cho</a>, New York University.</li>
+      <li><a class="name" href="http://raiahadsell.com">Raia Hadsell</a>, .</li>
+      <li><a class="name" href="https://mila.quebec/en/person/hugo-larochelle/">Hugo Larochelle</a>, Twitter.</li>
     </ul>
+
+    <!-- <ul class="editors">{% for e in editors_in_chief %}
+      <li><a class="name" href="{{ e.url }}">{{ e.name }}</a>, {{ e.affiliation }}.</li>{% endfor %}
+    </ul> -->
     
     <h3>Managing Editors</h3>
     <ul class="editors">
       <li><a class="name" href="http://fa.bianp.net">Fabian Pedregosa</a>, Google.</li>
     </ul>
-    
-    <h3>JMLR Action Editors</h3>
+
+    <!-- <h3>JMLR Action Editors</h3>
       <ul class="editors">{% for e in action_editors %}
         <li><a class="name" href="{{ e.url }}">{{ e.name }}</a>, <span class='affiliation'>{{ e.affiliation }}</span>. <span class="research">{{e.research}}</span>{% endfor %}
-      </ul>
+      </ul> -->
     
  
 {% endblock %}
