--- a/templates/submissions.html
+++ b/templates/submissions.html
@@ -4,7 +4,7 @@
 <h1>TMLR Submission Instructions</h1>
 
 <p>
-    Before submitting to TMLR, please carefully read the <a href="editorial-policies.html">Editorial Policies</a> page which explains TMLR’s scope, criteria, and review process, the <a href="author-guide.html">Author Guidelines</a>, and also the <a href="code.html">Code of Conduct</a> and Ethical Guidelines. The Author Guidelines page contains a LaTeX stylefile and template; these are mandatory. Any changes to the stylefile or template that alters the formatting, font, or layout of the manuscript may result in rejection without review.
+    Before submitting to TMLR, please carefully read the <a href="editorial-policies.html">Submission guidelines and editorial policies page</a> page which explains TMLR’s scope, criteria, and review process, the <a href="author-guide.html">Author Guidelines</a>, and also the <a href="code.html">Code of Conduct</a> and <a href="ethics.html">Ethical Guidelines</a>. The Author Guidelines page contains a LaTeX stylefile and template; these are mandatory. Any changes to the stylefile or template that alters the formatting, font, or layout of the manuscript may result in rejection without review.
 </p>
 
 <p>
