--- a/templates/author-guide.html
+++ b/templates/author-guide.html
@@ -17,12 +17,9 @@
             that it meets the criteria for the review process; e.g. it should be in scope, anonymous, and complete. Then
             reviewers will be assigned to read and review the manuscript. An open-ended rebuttal, discussion, and
             revision phase will allow authors to interact with reviewers and update their paper. Finally, the action
-            editor will enter a decision, either </span><span class="c6">accept as is</span><span>, </span><span
-            class="c6">accept with minor revisions</span><span>, or </span><span class="c6">reject</span><span>. See the
-        </span><span>Submission Guidelines and Editorial Policies</span><sup><a href="#cmnt4"
-                id="cmnt_ref4">[d]</a></sup><span>, as well as the </span><span>Reviewer</span><sup><a href="#cmnt5"
-                id="cmnt_ref5">[e]</a></sup><span>&nbsp;and </span><span>Action Editor Guidelines</span><sup><a
-                href="#cmnt6" id="cmnt_ref6">[f]</a></sup><span class="c3">, for more information. </span></p>
+            editor will enter a decision, either </span><span class="bold">accept as is</span><span>, </span><span
+            class="bold">accept with minor revisions</span><span>, or </span><span class="bold">reject</span>. See the
+        <a href="editorial-policies.html">Submission Guidelines and Editorial Policies</a>, as well as the <a href="reviewer-guide.html">Reviewer</a> and <a href="ae-guide.html">Action Editor Guidelines</a>, for more information. </span></p>
     <p class="c0 c8"><span class="c3"></span></p>
     <h2 class="c5" id="h.yrc9qs72su7m"><span class="c1">Broader impact statement</span></h2>
     <p class="c0"><span>If their work carries a significant risk of harm, authors are required to include a Statement of
