--- a/templates/code.html
+++ b/templates/code.html
@@ -17,10 +17,7 @@
     <p class="c4"><span>TMLR is based on an open review process. We consider authors, reviewers, action editors,
             editors-in-chief, advisory board members, staff members, and public commentators as the participants of TMLR
             (&ldquo;Participants&#39;&#39;). </span><span>Each and every Participant must agree with the
-            Code</span><sup><a href="#cmnt1" id="cmnt_ref1">[a]</a></sup><sup><a href="#cmnt2"
-                id="cmnt_ref2">[b]</a></sup><sup><a href="#cmnt3" id="cmnt_ref3">[c]</a></sup><sup><a href="#cmnt4"
-                id="cmnt_ref4">[d]</a></sup><sup><a href="#cmnt5" id="cmnt_ref5">[e]</a></sup><sup><a href="#cmnt6"
-                id="cmnt_ref6">[f]</a></sup><span>&nbsp;of Conduct before participating in any activity of TMLR.
+            Code of Conduct before participating in any activity of TMLR.
         </span><span>Editors</span><span class="c0">-in-Chief of TMLR (&ldquo;Editors&rdquo;) will enforce this code and
             expect cooperation from all Participants to help ensure a safe and productive scientific venue for
             everyone.</span></p>
