--- a/templates/editorial-board.html
+++ b/templates/editorial-board.html
@@ -43,8 +43,8 @@ $(document).ready(function(){
     <h3>Editors-in-Chief</h3>
     <ul class="editors">
       <li><a class="name" href="http://kyunghyuncho.me">Kyunghyun Cho</a>, New York University.</li>
-      <li><a class="name" href="http://raiahadsell.com">Raia Hadsell</a>, .</li>
-      <li><a class="name" href="https://mila.quebec/en/person/hugo-larochelle/">Hugo Larochelle</a>, Twitter.</li>
+      <li><a class="name" href="http://raiahadsell.com">Raia Hadsell</a>, DeepMind.</li>
+      <li><a class="name" href="https://mila.quebec/en/person/hugo-larochelle/">Hugo Larochelle</a>, Mila and google.</li>
     </ul>
 
     <!-- <ul class="editors">{% for e in editors_in_chief %}
