--- a/templates/ae-guide.html
+++ b/templates/ae-guide.html
@@ -3,28 +3,27 @@
 {% block content %}
 
 <h1 class="c1" id="h.9thkl4ire28v"><span class="c11 c12">TMLR guidelines for action editors</span></h1>
-<p class="c9"><span>This document provides instructions for </span><span>action editors (AE)</span><span>. Before
-        reading this section, make sure to also read and be familiar with the </span><span>Editorial
-        Policies</span><sup><a href="#cmnt1" id="cmnt_ref1">[a]</a></sup><span>, the </span><span>Reviewer
-        guidelines</span><sup   ><a href="#cmnt2" id="cmnt_ref2">[b]</a></sup><span>, the </span><span>Ethics
-        Guidelines</span><sup><a href="#cmnt3" id="cmnt_ref3">[c]</a></sup><span>, and the </span><span>Code of
-        Conduct</span><sup><a href="#cmnt4" id="cmnt_ref4">[d]</a></sup><span class="c4">.</span></p>
+<p class="c9"><span>This document provides instructions for </span><span>action editors (AE)</span>. Before
+        reading this section, make sure to also read and be familiar with the <a href="editorial-policies.html">Editorial
+        Policies</a>, the <a href="reviewer-guide.html">Reviewer
+        guidelines</a>, the <a href="ethics.html">Ethics
+        Guidelines</a>, and the <a href="code.html">Code of
+        Conduct</a>.</p>
 <h2 class="c2" id="h.yo76xypxbymj"><span class="c10">Action Editor Responsibilities</span></h2>
 <p class="c9"><span class="c4">As an AE, you are responsible for the following aspects of the review process:</span>
 </p>
 <p class="c0"><span class="c4"></span></p>
-<p class="c9"><span class="c6">Annual Quota</span><span>&nbsp; AE assignments are given on a rolling basis, as
+<p class="c9"><span class="bold">Annual Quota</span><span>&nbsp; AE assignments are given on a rolling basis, as
         submissions are received. TMLR will not assign you more than </span><span>12
         submissions</span><span>&nbsp;per year</span><span>&nbsp;(unless you accept the extra load). On the other
-        hand, you are generally </span><span class="c6">expected to accept all AE requests</span><span>&nbsp;of
+        hand, you are generally </span><span class="bold">expected to accept all AE requests</span><span>&nbsp;of
         submissions that fall within your expertise and quota. Acceptable exceptions are 1) situations where
         exceptional personal circumstances (e.g. vacation, health problems) render you incapable of fully performing
         your AE duties or 2) you have a conflict of interest with one of the authors</span><span>.</span></p>
 <p class="c0"><span class="c4"></span></p>
-<p class="c9"><span class="c6">Desk rejection of inappropriate submissions</span><span>&nbsp; The first step
+<p class="c9"><span class="bold">Desk rejection of inappropriate submissions</span><span>&nbsp; The first step
         following an AE assignment is to determine (within 1 week) whether or not the submitted preprint is
-        appropriate for TMLR and respects our </span><span>submission guidelines</span><sup><a href="#cmnt5"
-        id="cmnt_ref5">[e]</a></sup><sup><a href="#cmnt6" id="cmnt_ref6">[f]</a></sup><span>. Clear cases of
+        appropriate for TMLR and respects our <a href="editorial-policies.html">submission guidelines</a>. Clear cases of
         desk rejection include submissions that are not anonymized</span><span>,</span><span>&nbsp;submissions that
         do not use the unmodified TMLR stylefile and submissions that clearly </span><span>overlap</span><span
         class="c4">&nbsp;with work already published in proceedings (or currently under review for publication). If
@@ -32,7 +31,7 @@
         (e.g. lack of fit with the scope of TMLR or lack of technical depth), simply reach out to the Editors in
         Chief. </span></p>
 <p class="c0"><span class="c4"></span></p>
-<p class="c9"><span class="c6">Assignment</span><span class="c6">&nbsp;of reviewers</span><span>&nbsp; Once
+<p class="c9"><span class="bold">Assignment</span><span class="bold">&nbsp;of reviewers</span><span>&nbsp; Once
         confirmed that a submission is appropriate for TMLR, you should assign it for review to at
 </span><span>least 3 reviewers</span><span>. You must make the initial assignment </span><span>within
 </span><span>a week of accepting a paper&rsquo;s assignment. TMLR will give you access to a pool of reviewers
@@ -54,19 +53,17 @@
         out of date or solely based on an unrecognizable personal email (as opposed to an institutional
         email).</span></p>
 <p class="c0"><span class="c4"></span></p>
-<p class="c9"><span class="c6">Post-review discussion </span><span>&nbsp; Once the third review has been submitted,
+<p class="c9"><span class="bold">Post-review discussion </span><span>&nbsp; Once the third review has been submitted,
         the authors are given a chance to take into account the reviewers&rsquo; feedback, answer any questions they
         may have asked and update their manuscript accordingly. You are responsible for making sure the reviewers
         engage actively in this discussion. You may also participate in the discussion yourself, by asking questions
-        directly to the authors or starting a </span><span>private conversation via OpenReview &nbsp;</span><sup><a
-        href="#cmnt8" id="cmnt_ref8">[h]</a></sup><span>involving only the reviewers to </span><span>try to
-        reach a consensus</span><span class="c4">, if possible. Since papers on OpenReview are visible to all, there
+        directly to the authors or starting a private conversation via <a href="https://openreview.net/">OpenReview</a> involving only the reviewers to try to
+        reach a consensus, if possible. Since papers on OpenReview are visible to all, there
         might even be signed comments from non-reviewers that you think are relevant and would like to ask authors
         to react to. Overall, any intervention that will help you come to a decision recommendation for the
-        submission is encouraged (as long as it maintains the anonymity of the authors and reviewers). </span></p>
+        submission is encouraged (as long as it maintains the anonymity of the authors and reviewers). </p>
 <p class="c0"><span class="c4"></span></p>
-<p class="c9"><span>O</span><span>ur </span><span>Ethics Guidelines</span><sup><a href="#cmnt9"
-        id="cmnt_ref9">[i]</a></sup><span>&nbsp;describe TMLR&rsquo;s ethical principles and establish common
+<p class="c9">Our <a href="ethhics.html">Ethics Guidelines</a> describe TMLR&rsquo;s ethical principles and establish common
         ground for editors, reviewers, and authors to evaluate the potential for harm of a proposed
         work.</span><span>&nbsp;</span><span>If you or any of the reviewers have concerns around the ethical
         implications of the submission, check whether the authors address the concerns in the (otherwise optional)
@@ -78,16 +75,15 @@
         recommendation to you on a decision for a submission no sooner than 2 weeks and no later than 4 weeks after
         the submission of the third review. </span></p>
 <p class="c0"><span class="c4"></span></p>
-<p class="c9"><span class="c6">Decision and certification </span><span>&nbsp; Once all 3 reviewer decision
+<p class="c9"><span class="bold">Decision and certification </span><span>&nbsp; Once all 3 reviewer decision
         recommendations have been submitted, y</span><span>ou should aim</span><span class="c4">&nbsp;to submit your
         decision proposal within 1 week. Your decision proposal should therefore be submitted within 5 weeks of the
         beginning of the discussion between authors and reviewers. If, and only if, authors and reviewers are still
         discussing the submission, you may decide to take more time.</span></p>
 <p class="c0"><span class="c4"></span></p>
 <p class="c9"><span>There are 3 possible outcomes: Accept, Accept with minor revision and Reject (see
-</span><span>Editorial Policies</span><sup><a href="#cmnt10" id="cmnt_ref10">[j]</a></sup><span>). As described
-        in the </span><span>Reviewer guidelines</span><sup><a href="#cmnt11" id="cmnt_ref11">[k]</a></sup><span
-        class="c4">, acceptance decisions should be made based on two criteria:</span></p>
+<a href="editorial-policies.html">Editorial Policies</a>). As described
+        in the <a href="reviewer-guide.html">Reviewer guidelines</a>, acceptance decisions should be made based on two criteria:</span></p>
 <p class="c0"><span class="c3 c7"></span></p>
 <p class="c9"><span class="c3">Are the claims made in the submission supported by accurate, convincing and clear
         evidence?</span></p>
@@ -95,10 +91,10 @@
         of this paper?</span></p>
 <p class="c0"><span class="c4"></span></p>
 <p class="c9"><span>In addition to a decision, for accepted papers, you may also recommend a
-</span><span>certification</span><sup><a href="#cmnt12" id="cmnt_ref12">[l]</a></sup><span class="c4">&nbsp;if
+</span><span>certification</span> if
         you think the paper deserves to stand out with one such additional recognition.</span></p>
 <p class="c0"><span class="c4"></span></p>
-<p class="c9"><span class="c6">Final verification of camera ready submission</span><span>&nbsp; &nbsp;As your final
+<p class="c9"><span class="bold">Final verification of camera ready submission</span><span>&nbsp; &nbsp;As your final
         task for an accepted paper, you are asked to quickly verify that the camera ready manuscript complies with
         TMLR stylefile, with all author information inserted in the manuscript as well as the link to the OpenReview
         page for the submission.</span></p>
